--- a/templates/base.html
+++ b/templates/base.html
@@ -105,6 +105,16 @@
         .alert-success { @apply bg-emerald-600 }
         .alert-warning { @apply bg-orange-600 }
         .alert-danger { @apply bg-red-600 }
+
+        .green-dot {
+            @apply rounded-full bg-green-500 p-1.5
+        }
+        .gray-dot {
+            @apply rounded-full bg-gray-500 p-1.5
+        }
+        .graylight-dot {
+            @apply rounded-full bg-gray-300 p-1.5
+        }
     </style>
 </head>
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' class="{% block class %}{% endblock %}">
