--- a/a_rtchat/templates/a_rtchat/chat.html
+++ b/a_rtchat/templates/a_rtchat/chat.html
@@ -2,10 +2,37 @@
 
 {% block content%}
 <wrapper class="block max-w-2xl mx-auto my-10 px-6">
+    {% if chatroom.title %}
+    <h3>{{ chatroom.title }}</h3>
+    {% endif %}
     <div id="chat_window" class="h-[45rem] flex flex-col bg-gray-800 rounded-2xl shadow-2xl relative p-1">
-        <div class="flex justify-center text-emerald-400 bg-gray-800 p-2 sticky top-0 z-10">
+        <div class="flex justify-center text-emerald-400 bg-gray-800 p-2 sticky top-0 z-10">            
+            {% if chatroom.title %}
+            <ul id="groupchat-members" class="flex gap-4">
+                {% for member in chatroom.member.all%}
+                <li>
+                    <a href="{% url 'profile' member.username %}" class="flex flex-col text-gray-400 items-center justify-center w-20 gap-2">
+                        <img src="{{ member.profile.avatar}}" class="w-14 h-14 rounded-full object-cover"/>
+                        {{ member.profile.name|slice:":10" }}
+                    </a>
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
             <div id="online-icon"></div>
             <span id="online-count" class="pr-1"></span>online
+            {% endif %}
+    
+            <!-- <ul id="groupchat-members" class="flex gap-4">
+                {% for member in chatroom.member.all%}
+                <li>
+                    <a href="{% url 'profile' member.username %}" class="flex flex-col text-gray-400 items-center justify-center w-20 gap-2">
+                        <img src="{{ member.profile.avatar}}" class="w-14 h-14 rounded-full object-cover"/>
+                        {{ member.profile.name|slice:":10" }}
+                    </a>
+                </li>
+                {% endfor %}
+            </ul> -->
         </div>
         <div id='chat_container' class="overflow-y-auto grow">
             <ul id='chat_messages' class="flex flex-col justify-end gap-2 p-4">
@@ -18,7 +45,7 @@
             <div class="flex items-center rounded-xl px-2 py-2">
                 <form id="chat_message_form" class="w-full" 
                         hx-ext="ws"
-                        ws-connect="/ws/chatroom/public-chat"
+                        ws-connect="/ws/chatroom/{{chatroom.id}}"
                         ws-send
                         _="on htmx:wsAfterSend reset() me">
                     {% csrf_token %}
