--- a/a_rtchat/templates/a_rtchat/partials/online_count.html
+++ b/a_rtchat/templates/a_rtchat/partials/online_count.html
@@ -1,4 +1,4 @@
-<span id="online-count" hx-swap-oob="outerHTML" class="pr-1">
+<span id="online-count" hx-swap-oob="outerHTML" class="fade-in-scale pr-1">
     {{ online_count }}
     <style>
         @keyframes fadeInScale {
@@ -16,3 +16,22 @@
 {% else %}
 <div id="online-icon" class="absolute top-2 left-2 rounded-full bg-gray-500 p-1.5"></div>
 {% endif %}
+
+<ul id="groupchat-members" class="flex gap-4">
+    {% for member in chatroom.member.all%}
+    <li>
+        <a href="{% url 'profile' member.username %}" class="flex flex-col text-gray-400 items-center justify-center w-20 gap-2">
+            <div class="relative">
+                {% if member in chatroom.users_online.all %}
+                <div class="green-dot border-2 border-gray-800 absolute bottom-0 right-0"></div>
+                {% else %}
+                <div class="gray-dot border-2 border-gray-800 absolute bottom-0 right-0"></div>
+                {% endif %}
+                <img src="{{ member.profile.avatar}}" class="w-14 h-14 rounded-full object-cover"/>
+            </div>
+            {{ member.profile.name|slice:":10" }}
+        </a>
+    </li>
+    {% endfor %}
+    
+</ul>
