--- a/a_rtchat/templates/a_rtchat/chat.html
+++ b/a_rtchat/templates/a_rtchat/chat.html
@@ -42,15 +42,21 @@
             </ul>
         </div>
         <div class="sticky bottom-0 z-10 p-2 bg-gray-800">
-            <div class="flex items-center rounded-xl px-2 py-2">
+            <div class="flex items-center rounded-xl px-2 py-2">                
                 <form id="chat_message_form" class="w-full" 
                         hx-ext="ws"
                         ws-connect="/ws/chatroom/{{chatroom.id}}"
                         ws-send
                         _="on htmx:wsAfterSend reset() me">
+                        {% if request.user.is_authenticated %}
                     {% csrf_token %}
                     {{ form }}
-                </form>
+                    {% else %}                
+                    <input type="text" placeholder="You must be logged in to chat"
+                        class="w-full p-2 bg-gray-700 text-gray-400 cursor-not-allowed"
+                        disabled>                
+                    {% endif %}
+                </form>                
             </div>
         </div>
     </div>
